# alida-sdk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/alida_sdk/: __init__.py  auth.py  cli.py  client.py  exceptions.py  models.py  output.py  questions.py  surveys.py  transforms.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_questions.py  test_surveys.py  test_transforms.py
