[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alida-sdk"
version = "0.1.0"
description = "Python SDK and CLI for the Alida CXM platform API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21.0",
]

[project.scripts]
alida-sdk = "alida_sdk.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/alida_sdk"]
